--- a/css-and-js/search.css
+++ b/css-and-js/search.css
@@ -31,7 +31,7 @@ body {
     border: 0;
     height: 50px;
     width: 50px;
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 
 .search-box .input {
