--- a/css-and-js/sound.css
+++ b/css-and-js/sound.css
@@ -3,8 +3,27 @@
     box-sizing: border-box;
 }
 
-.buttonContainer {
+body {
+    background-color: rgb(210, 0, 0);
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.btn {
+    background-color: rgb(125, 210, 20);
+    font-size: 1.3rem;
+    padding: 1.5rem 2.5rem;
+    margin: 1rem;
+    border-radius: 5px;
+    border: none;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+}
+
+.btn:hover {
+    opacity: 0.8;
+    transition: opacity 0.7s ease;
 }
