Tue, Mar 5, 2024, 2:41 PM -08:00

--- a/css-and-js/navigation.css
+++ b/css-and-js/navigation.css
@@ -10,3 +10,12 @@ body {
     padding-bottom: 50px;
     font-family: "Consolas", sans-serif;
 }
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.hero {
+    background-image: ;
+}
