Tue, Mar 5, 2024, 2:47 PM -08:00

--- a/css-and-js/navigation.css
+++ b/css-and-js/navigation.css
@@ -17,5 +17,5 @@ body {
 }
 
 .hero {
-    background-image: url(css-and-js/cookie.jfif);
+    background-image: url(css-and-js/images/cookie.jfif);
 }
