Tue, Mar 5, 2024, 2:59 PM -08:00

--- a/css-and-js/navigation.css
+++ b/css-and-js/navigation.css
@@ -17,7 +17,7 @@ body {
 }
 
 .hero {
-    background-image: url(css-and-js/images/isaac.jfif);
+    background-image: url(images/yuh.jfif);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom center;
