--- a/css-and-js/navigation.css
+++ b/css-and-js/navigation.css
@@ -42,3 +42,8 @@ body {
     background-color: rgba(0, 0, 0, 0.3);
     z-index: -1;
 }
+
+.hero h1 {
+    font-size: 46px;
+    margin-bottom: 20px;
+}
