Tue, Mar 5, 2024, 3:04 PM -08:00

--- a/css-and-js/navigation.css
+++ b/css-and-js/navigation.css
@@ -39,11 +39,20 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.2);
     z-index: -1;
 }
 
 .hero h1 {
     font-size: 46px;
     margin-bottom: 20px;
+}
+
+.hero p {
+    font-size: 20px;
+    letter-spacing: 2.5px;
+}
+
+.content h2, .content h3 {
+    
 }
