--- a/css-and-js/index.css
+++ b/css-and-js/index.css
@@ -27,8 +27,8 @@ a, a:visited {
 }
 
 .dropButton {
-    background-color: rgb();
-    color: rgb(0, 170, 230);
+    background-color: #FBBB16;
+    color: #000068;
     padding: 16px;
     font-size: 16px;
     border: solid 2px black;
@@ -37,6 +37,7 @@ a, a:visited {
 
 .dropButton:hover, .dropButton:focus {
   background-color: #2980B9;
+  transition: 0.3s ease-in;
 }
 
 .dropdown {
@@ -58,7 +59,7 @@ a, a:visited {
 
 .dropContent a {
   color: black;
-  padding: 12px 16px;
+  /* padding: 12px 16px; */
   text-decoration: none;
   display: block;
 }
