--- a/css-and-js/index.css
+++ b/css-and-js/index.css
@@ -37,7 +37,7 @@ a, a:visited {
 
 .dropButton:hover, .dropButton:focus {
   background-color: #2980B9;
-  transition: 0.3s ease-in;
+  transition: 0.3s ease-in-out;
 }
 
 .dropdown {
@@ -59,7 +59,6 @@ a, a:visited {
 
 .dropContent a {
   color: black;
-  /* padding: 12px 16px; */
   text-decoration: none;
   display: block;
 }
