Fri, Mar 15, 2024, 5:59 PM -07:00

--- a/css-and-js/landing.css
+++ b/css-and-js/landing.css
@@ -16,6 +16,10 @@ body {
     font-family: "roboto-mono", monospace;
 }
 
+body.show-nav {
+    transition: translateX(200px);
+}
+
 nav {
     background-color: var(--primary-color);
     position: fixed;
