--- a/css-and-js/landing.css
+++ b/css-and-js/landing.css
@@ -17,7 +17,9 @@ body {
 }
 
 body.show-nav {
-    transition: translateX(200px);
+    transform: translateX(200px);
+    margin: 0;
+    transition: transform 0.3s ease;
 }
 
 nav {
@@ -27,7 +29,7 @@ nav {
     left: 0;
     width: 200px;
     height: 100%;
-    border-right: 2px solid rgba(200, 200, 200, 0,1);
+    border-right: 2px solid rgba(0, 0, 0, 0.4);
     z-index: 100;
     color: white;
     transform: translateX(-100%);
