--- a/css-and-js/search.css
+++ b/css-and-js/search.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     margin: 0;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     height: 100vh;
 }
 
@@ -52,4 +52,17 @@ body {
 
 .search-box.active .btn {
     transform: translateX(198px);
+}
+
+a {
+    color: red;
+}
+
+a:hover {
+    background-color: white;
+}
+
+.homeLink {
+    top: 0;
+    left: 0;
 }
