Fri, Mar 15, 2024, 6:34 PM -07:00

--- a/css-and-js/loading.css
+++ b/css-and-js/loading.css
@@ -31,6 +31,15 @@ body {
     opacity: 1;
 }
 
-.homeButton {
-    display: none;
+.homeLink {
+    color: red;
+    text-decoration: underline;
 }
+
+.homeLink:hover {
+    color: white;
+}
+
+/* .homeButton {
+    display: none;
+} */
